LENS-705: Update README with proper MAVEN_OPTS